# RevolutTaxCalculatorFr

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
revolut_tax_fr/: calculator.py  cli.py  config.py  enricher.py  forms.py  main.py  parser.py  portfolio.py  reporter.py  web.py
templates/: report.html.j2  upload.html.j2
tests/integration/: test_pipeline.py
tests/unit/: test_calculator.py  test_carry_forward.py  test_cli.py  test_enricher.py  test_parser.py  test_portfolio.py  test_web.py
