[project]
name = "revolut-tax-calculator-fr"
version = "0.1.0"
description = "French tax report from Revolut account statements"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "jinja2>=3.1.0",
    "yfinance>=0.2",
]

[project.scripts]
revolut-tax = "revolut_tax_fr.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pre-commit>=4.0",
    "ruff>=0.9",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["revolut_tax_fr"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "C4",   # flake8-comprehensions
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line length enforced by formatter instead
]

[tool.ruff.lint.isort]
known-first-party = ["revolut_tax_fr"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
