[project]
name = "revolut-tax-calculator-fr"
version = "0.1.0"
description = "French tax report from Revolut account statements"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "jinja2>=3.1.0",
    "yfinance>=0.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
revolut-tax     = "revolut_tax_fr.cli:compute_app"
revolut-tax-web = "revolut_tax_fr.cli:serve_app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pre-commit>=4.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["revolut_tax_fr"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["revolut_tax_fr"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
